<resources>
    <string name="app_name">The Movie DataBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MovieListNames">MovieListNames</string>
    <string name="try_again">try again</string>
    <string name="username">User_Name</string>
    <string name="password">Pass_Word</string>
    <string name="password_loginPage">Pass_Word</string>
    <string name="usr_pass_file">usrfilepasss</string>
    <string name="requestToken">request_token</string>
    <string name="sessionId">session_id</string>
    <string name="accountId">account_id</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_password_loginPage">Enter your Password</string>
    <string name="enter_your_username_loingPage">Enter your Username</string>
    <string name="login_loginPage">Login</string>
    <string name="logout_loginPage">Logout</string>
    <string name="the_movie_database_loginPage">THE MOVIE DATABASE</string>
    <string name="register_loginPage">Register</string>

    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>

    <string name="invalid_username_password">Invalid UserName Or Password</string>
    <string name="dont_have_account_loginPage">Don\'t hava an account?</string>
    <string name="forgot_password_LoginPage">forgot password?</string>
    <string name="api_error_text">oops…something went wrong!!</string>
    <string name="check_your_connection">check your connection!</string>


    <string name="popular_category">Popular</string>
    <string name="trending_category">Trending</string>
    <string name="movie_category_demoTitle">The Movie Name is the Best</string>
    <string name="signUp_url">https://www.themoviedb.org/signup</string>
    <string name="forgot_password_url">https://www.themoviedb.org/reset-password</string>

    <string name="mainMenu_lists">Lists</string>
    <string name="mainMenu_favorite">Favorite</string>
    <string name="mainMenu_watchList">Watchlist</string>
    <string name="default_search_text">The Good Bad Ugly…</string>

    <string name="itemMenu_addToList">Add to list</string>
    <string name="itemMenu_addToFavorite">Favorite</string>
    <string name="itemMenu_addToWatchList">Watchlist</string>
    <string name="itemMenu_YourRating">Your rating</string>

    <string name="deeplink_start">tedu://start</string>
</resources>