<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn ="navigation_view"
    >
        <item
            android:id="@+id/addToList_mainPageF_item"
            android:title="@string/mainMenu_lists"
            android:icon="@drawable/ic_add_to_list_menu"
            />
        <item
            android:id="@+id/favorite_mainPageF_item"
            android:title="@string/mainMenu_favorite"
            android:icon="@drawable/ic_favorite_menu"
            />
        <item
            android:id="@+id/watchList_mainPageF_item"
            android:title="@string/mainMenu_watchList"
            android:icon="@drawable/ic_bookmark_menu"
            />
    <item
        android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/logout_mainPageF_item"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/logout_loginPage"
                />
        </menu>
    </item>
    <item
        android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share_mainPageF_item"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"
                />
        </menu>
    </item>

</menu>