<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/bg_border_movie_category"
    android:alpha="0.9"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        >
        <ImageView
            android:id="@+id/addToList_popup_icon"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_add_to_list_menu"/>
        <TextView
            android:id="@+id/addToList_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemMenu_addToList"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/addToList_popup_icon"
            android:fontFamily="sans-serif-medium"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp">
        <ImageView
            android:id="@+id/favorite_popup_icon"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_favorite_menu"/>
        <TextView
            android:id="@+id/favorite_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemMenu_addToFavorite"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/favorite_popup_icon"
            android:fontFamily="sans-serif-medium"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp">
        <ImageView
            android:id="@+id/watchlist_popup_icon"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="5dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_bookmark_menu"/>
        <TextView
            android:id="@+id/watchlist_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemMenu_addToWatchList"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/watchlist_popup_icon"
            android:fontFamily="sans-serif-medium"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

<!--&lt;!&ndash;    <RelativeLayout&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="wrap_content">&ndash;&gt;-->
<!--&lt;!&ndash;        <ImageView&ndash;&gt;-->
<!--&lt;!&ndash;            android:id="@+id/rating_popup_icon"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_margin="5dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:background="@drawable/ic_bookmark_menu"/>&ndash;&gt;-->
<!--&lt;!&ndash;        <TextView&ndash;&gt;-->
<!--&lt;!&ndash;            android:id="@+id/rating_popup_menu"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:text="@string/itemMenu_YourRating"&ndash;&gt;-->
<!--&lt;!&ndash;            android:textSize="15sp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_margin="5dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_toEndOf="@+id/rating_popup_icon"&ndash;&gt;-->
<!--&lt;!&ndash;            android:fontFamily="sans-serif-medium"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_centerHorizontal="true"&ndash;&gt;-->
<!--&lt;!&ndash;            />&ndash;&gt;-->
<!--    </RelativeLayout>-->


</LinearLayout>