<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.MainPageFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:duration="800">

            <!-- Adding 7 rows of placeholders -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/data_placeholder_layout" />
                <include layout="@layout/data_placeholder_layout" />
                <include layout="@layout/data_placeholder_layout" />
                <include layout="@layout/data_placeholder_layout" />
                <include layout="@layout/data_placeholder_layout" />
                <include layout="@layout/data_placeholder_layout" />
                <include layout="@layout/data_placeholder_layout" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <Button
            android:id="@+id/btn_mainPageF_searchButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/white_searchbar_background"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/default_search_text"
            android:gravity="center"
            />

        <ScrollView
            android:layout_below="@+id/btn_mainPageF_searchButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/lnr_mainPageF_popularLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_mainPageF_popularTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/popular_category"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_mainPageF_popularItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_movie_category" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_mainPageF_trendingLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lnr_mainPageF_popularLayout"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_mainPageF_trendingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/trending_category"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_mainPageF_trendingItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_movie_category" />

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>